--- a/css/styles.css
+++ b/css/styles.css
@@ -105,18 +105,15 @@ img {
 .header-flex {
     display: flex;
     align-items: center;
+    padding: 24px 0;
 }
 
 .header-list {
-    display: flex;
-    gap: 40px;
+    display: none;
 }
 
 .header-address {
-    display: flex;
-    gap: 40px;
-    padding: 24px 0;
-    margin-left: 332px;
+    display: none;
 }
 
 .header {
@@ -208,21 +205,185 @@ img {
     background-color: #404bbf;
 }
 
+.footer-social {
+    fill: var(--modal-background);
+}
+
+.mobile-menu-open {
+    display: block;
+    border: none;
+    background-color: transparent;
+    padding: 8px;
+    width: 40px;
+    height: 40px;
+    margin: auto 0 auto auto;
+}
+
+.mobile-menu-open {
+    stroke: var(--navyblue);
+    fill: var(--navyblue);
+}
+
+.mobile-menu-open:focus,
+.mobile-menu-open:hover {
+    stroke: var(--ocean);
+    fill: var(--ocean);
+}
+
+.mobile-menu-close {
+    display: block;
+    margin-left: auto;
+    margin-bottom: 32px;
+    width: 40px;
+    height: 40px;
+    border: none;
+    background-color: transparent;
+}
+
+.mobile-menu-close .close-menu-icon {
+    display: block;
+    margin: 0 auto;
+    background-color: rgba(231, 233, 252, 0.1);
+    border: 1px solid rgba(46, 47, 66, 0.1);
+    padding: 6px;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-close:hover .close-menu-icon {
+    border: none;
+    background-color: var(--pressed-state);
+    fill: var(--white);
+}
+
+.mobile-menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    padding: 24px 24px 40px 40px;
+    background-color: var(--white);
+    z-index: 1;
+
+    transform: translateX(300%);
+    transition: transform 250ms ease-in-out;
+}
+
+.mobile-menu-container.is-open {
+    transform: translateX(0);
+    display: flex;
+    flex-direction: column;
+}
+
+.mobile-navigation-section {
+    margin-bottom: auto;
+}
+
+.mob-nav-list {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: auto;
+    gap: 40px;
+}
+
+.nav-link-mobile {
+    color: var(--dark);
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-nav-list-items:focus .nav-link-mobile,
+.mob-nav-list-items:hover .nav-link-mobile {
+    color: var(--ocean);
+}
+
+.mobile-navigation-address {
+    margin-bottom: 48px;
+}
+
+.mobile-address-list {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 40px;
+}
+
+.mobile-address-links {
+    display: inline-block;
+    transition: font-size 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: var(--slate);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+}
+
+.mobile-menu-phone {
+    color: var(--iris);
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+}
+
+.social-media-list-mobile {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 56px;
+}
+
+.mobile-icon-links {
+    background-color: var(--iris);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    flex-wrap: wrap;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-social-svg {
+    display: flex;
+    margin: 8px 8px;
+    fill: var(--cloud);
+}
+
+.mobile-icon-links:focus,
+.mobile-icon-links:hover {
+    background-color: var(--green);
+}
+
 body {
     font-family: "Roboto", sans-serif;
     color: var(--slate);
     background-color: var(--white);
-    /* max-width: 1440px; */
 }
 
 .fist-section {
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-mob.jpg);
     background-repeat: no-repeat;
     background-position: center;
     margin: 0 auto;
     background-size: cover;
-    padding: 188px 0;
-    max-width: 1440px;
+    padding: 112px 0;
+    max-width: auto;
+}
+
+@media (min-device-pixel-ratio:2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+    .fist-section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-mob-2х.jpg);
+    }
 }
 
 .button-style-main {
@@ -261,25 +422,28 @@ body {
     color: var(--white);
     text-align: center;
     text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    font-size: 56px;
-    line-height: 1.07;
-    letter-spacing: 1.12px;
-    max-width: 496px;
+    font-size: 36px;
+    line-height: 40px;
+    letter-spacing: 0.72px;
+    max-width: 320px;
     margin: 0 auto;
+    text-transform: capitalize;
 }
 
 .second-section {
-    padding: 120px 0;
+    padding: 96px 0 96px 0;
 }
 
 .second-section-ul {
     display: flex;
     justify-content: center;
-    gap: 24px;
+    flex-direction: column;
+    gap: 72px;
+    margin: 0 auto;
 }
 
 .second-list-div {
-    width: calc((100% - 72px) / 4);
+    width: 100%;
 }
 
 .second-div-icons {
@@ -290,15 +454,17 @@ body {
     background-color: var(--cloud);
     border-radius: 4px;
     margin-bottom: 8px;
+    display: none;
 }
 
 .second-section-header {
     color: var(--navyblue);
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0.4px;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0.72px;
     margin-bottom: 8px;
+    text-align: center;
 }
 
 .text-second-section {
@@ -306,10 +472,12 @@ body {
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.32px;
+    font-weight: 500;
 }
 
 .portfolio-section {
     padding-bottom: 120px;
+    display: none;
 }
 
 .portfolio-big-header {
@@ -344,7 +512,8 @@ body {
 
 .team-ul {
     display: flex;
-    gap: 24px;
+    gap: 72px;
+    flex-direction: column;
     justify-content: center;
 }
 
@@ -356,7 +525,7 @@ body {
 
 .team-section {
     background-color: #F4F4FD;
-    padding: 120px 0;
+    padding: 96px 0;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -364,11 +533,13 @@ body {
 
 .team-person {
     background-color: #FFFFFF;
-    flex-basis: calc((100% - 3 * 24px) / 4);
+    width: 264px;
+    /* flex-basis: calc((100% - 3 * 24px) / 4); */
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
+    margin: 0 auto;
 }
 
 .preson-name {
@@ -422,7 +593,7 @@ body {
 }
 
 .customers-section {
-    padding: 120px 0;
+    padding: 96px 0;
 }
 
 .customers-header {
@@ -438,11 +609,12 @@ body {
 .customers-list {
     display: flex;
     justify-content: center;
-    gap: 24px;
+    gap: 16px;
+    flex-wrap: wrap;
 }
 
 .customers-item {
-    width: calc((100% - 120px) / 6);
+    width: calc((100% - 16px) / 2);
     height: 88px;
 }
 
@@ -478,20 +650,30 @@ body {
 
 .footer-flex {
     display: flex;
+    flex-direction: column;
     align-items: baseline;
+    gap: 72px;
+}
+
+.footed-div {
+
+    width: auto;
+    margin: 0 auto;
 }
 
 .footed-div-1 {
-    margin-right: 120px;
+    width: auto;
+    margin: 0 auto;
 }
 
-.footed-div-2{
-    margin-right: 80px;
+.footed-div-2 {
+    width: auto;
+    margin: 0 auto;
 }
 
 .footer-logo {
     display: inline-block;
-    margin-bottom: 16px;
+    margin: 0 calc((100% - 115px) / 2) 16px calc((100% - 115px) / 2);
 }
 
 .footer-text {
@@ -502,6 +684,7 @@ body {
     display: block;
     width: 264px;
     height: 72px;
+    margin: 0 auto;
 }
 
 .footer-soc-list {
@@ -537,11 +720,12 @@ body {
 
 .footer-form {
     display: flex;
-    gap: 24px;
+    flex-direction: column;
+    gap: 16px;
 }
 
 .footer-email-input {
-    width: 264px;
+    width: 100%;
     height: 40px;
     border: 1px solid #ffffff;
     background-color: transparent;
@@ -560,6 +744,8 @@ body {
 
 .footer-button {
     min-width: 165px;
+    max-width: 165px;
+    ;
     height: 40px;
     display: flex;
     justify-content: center;
@@ -574,6 +760,7 @@ body {
     background-color: #4D5AE5;
     border: none;
     border-radius: 4px;
+    margin: 0 auto;
 }
 
 .footer-tg-icon {
@@ -582,13 +769,14 @@ body {
 }
 
 .social-media {
-        color: var(--white);
+    color: var(--white);
     font-family: Roboto;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
     margin-bottom: 16px;
+    text-align: center;
 }
 
 .address {
@@ -713,7 +901,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
-    width: 408px;
+    width: 392px;
     min-height: 584px;
     background: #fcfcfc;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -721,7 +909,7 @@ body {
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    padding: 72px 24px 24px 24px;
+    padding: 72px 16px 24px 16px;
 
 }
 
