--- a/css/styles.css
+++ b/css/styles.css
@@ -156,10 +156,6 @@ img {
 .contacts-style:hover,
 .contacts-style:focus {
     color: var(--ocean);
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.32px;
 }
 
 
@@ -338,7 +334,7 @@ img {
 .social-media-list-mobile {
     display: flex;
     flex-wrap: wrap;
-    gap: 56px;
+    justify-content: space-between;
 }
 
 .mobile-icon-links {
@@ -901,7 +897,8 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
-    width: 392px;
+    /* min-width: 300px; */
+    width: 96%;
     min-height: 584px;
     background: #fcfcfc;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
